--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -1,5 +1,19 @@
 @use '../abstracts/colors' as *;
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap');
+
+
+html {
+  box-sizing: border-box;
+}
+body{
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+
 .flex {
   display: flex;
   justify-content: center;
@@ -10,12 +24,12 @@
 .light{
   background-color: $background;
   transition: background-color 1000ms linear;
-  p{
+  p, h1, h3{
     color: $dark-900 ; 
   }
 
   .bar-item {
-    background-color: #f2f3f5;
+    background-color: $dark-200;
     transition: background-color 100ms linear;
 
     &:hover{ 
@@ -32,7 +46,7 @@
   background-color: $background-dark;
   transition: background-color 1000ms linear;
 
-  p{
+  p, h1, h3{
     color: white ;
   }
 
