--- a/src/sass/abstracts/_colors.scss
+++ b/src/sass/abstracts/_colors.scss
@@ -32,5 +32,5 @@ $dark-900:#171717;
 
 $primary: $green-700;
 $secondary: $lime-600;
-$background: #f8f9fa;
+$background: #A9CEB6;
 $background-dark: $dark-900;
