--- a/src/sass/layout/_NavBar.scss
+++ b/src/sass/layout/_NavBar.scss
@@ -2,7 +2,7 @@
   display: flex;
   position: fixed;
   left: 50%;
-  bottom: 1rem;
+  bottom: .3rem;
   transform: translate(-50%, -50%);
   margin: 0 auto;
   
@@ -19,19 +19,52 @@
     .bar-title{
       display: none;
     }
-    &:hover{
-      flex-direction: column;
-      .bar-title{
-        position: absolute;
-        display: block;
-        top: 2.7rem;
-      }
-    }
    }
-}
 
-
-
+ }
 .theme-item {
   border-style: none;
+  display: flex;
+  position: absolute;
+  align-items: center;
+  top: 2rem;
+  right: 2rem;
+}
+  
+@media screen and (min-width: 768px) {
+  .bar-container{
+    position:sticky;
+    align-items: center;
+    justify-content: flex-start;
+    transform: none;
+    height: 4rem;
+    background-color: white;
+    padding: 0 1rem;
+
+    .active {
+      background: white !important;
+    }
+
+    .bar-item{
+      border-radius: 0;
+      
+      text-decoration: none;
+      background: white;
+      padding: 0 0;
+      margin: 0 1.5rem;
+
+      .bar-icon{
+        display: none;
+      }
+      .bar-title{
+        position: relative;
+        display: inline-block;
+        
+      }
+    }
+  }
+    .theme-item {
+      top: 1rem;
+      right: 4rem;
+    }
 }
