--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -6,6 +6,7 @@
 html {
   box-sizing: border-box;
 }
+
 body{
   margin: 0;
   font-family: "Roboto", sans-serif;
@@ -13,12 +14,22 @@ body{
   -moz-osx-font-smoothing: grayscale;
 }
 
-
 .flex {
   display: flex;
   justify-content: center;
   height: 100vh;
   align-items: center;
+
+  .layout-container{
+    margin-bottom: 4rem;
+  }
+  @media screen and (min-width: 768px) {
+    .layout-container{
+      width: 100%;
+      height: 100%;
+      margin-bottom: 0;
+     }
+  }
 }
 
 .light{
