home: typing animation

--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,7 +1,8 @@
 .home-container{
   display: flex;
   flex-direction: column;
-  padding: 0 1.5rem; 
+  align-items: center;
+  padding: 2rem; 
   height: 90%;
 
   div {
