--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,35 +1,90 @@
-.home-container{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 2rem; 
-  height: 90%;
+.home-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 2rem;
+	height: 90%;
 
-  div {
-    h1{
-      font-size: 2.17rem;
-    }
-    p{
-      display: flex;
-      justify-content: flex-end;
-      font-size: .7rem;
-      margin-top: -1.5rem;
-    }
+	div {
+		h1 {
+			font-size: 2rem;
+		}
+		p {
+			display: flex;
+			justify-content: flex-end;
+			font-size: 0.7rem;
+			margin-top: -1.5rem;
+		}
 
-    @media screen and (min-width: 768px) {
-      h1{
-        font-size: 4rem;
-      }
-      p{
-        font-size: 1rem;
-        margin-top: -3rem;
-      }
-    }
-  }
+		@media screen and (min-width: 768px) {
+			h1 {
+				font-size: 4rem;
+			}
+			p {
+				font-size: 1rem;
+				margin-top: -3rem;
+			}
+		}
+	}
+	h3 {
+		display: flex;
+		justify-content: flex-start;
+	}
 
-  p{
-    margin-top: 2rem;
-    display: flex;
-    justify-content: center;
-  }
+	p {
+		margin-top: 2rem;
+		display: flex;
+		justify-content: center;
+	}
+
+	//iconos redes
+	.icons {
+		display: flex;
+		column-gap: 1rem;
+
+		.icon {
+			width: 4rem;
+			height: 4rem;
+			display: inline-flex;
+			align-items: center;
+			justify-content: center;
+			font-size: 2.5rem;
+			color: #fff;
+			border-radius: 50%;
+			outline: 0.2rem solid #fff;
+			transition-property: outline-offset, outline-color, background-color;
+			transition-duration: 0.25s;
+
+			&:hover {
+				outline-offset: 0.4rem;
+				svg {
+					animation: shake 0.25s;
+				}
+			}
+		}
+		.icon-linkedin:hover {
+			background-color: #0077b5;
+			outline-color: #0077b5;
+		}
+
+		.icon-github:hover {
+			background-color: #2ea44f;
+			outline-color: #2ea44f;
+		}
+
+		@keyframes shake {
+			10% {
+				transform: rotate(15deg);
+			}
+			20% {
+				transform: rotate(-15deg);
+			}
+			30% {
+				transform: rotate(15deg);
+			}
+			40% {
+				transform: rotate(-15deg);
+			}
+		}
+	}
 }
