--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,6 +1,7 @@
 .home-container {
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
 	align-items: center;
 	padding: 2rem;
 	height: 90%;
@@ -15,8 +16,15 @@
 			font-size: 0.7rem;
 			margin-top: -1.5rem;
 		}
+	}
+	h3 {
+		padding: 0 0.5rem;
+		font-size: 1.5rem;
+		height: 4rem;
+	}
 
-		@media screen and (min-width: 768px) {
+	@media screen and (min-width: 768px) {
+		div {
 			h1 {
 				font-size: 4rem;
 			}
@@ -26,16 +34,6 @@
 			}
 		}
 	}
-	h3 {
-		display: flex;
-		justify-content: flex-start;
-	}
-
-	p {
-		margin-top: 2rem;
-		display: flex;
-		justify-content: center;
-	}
 
 	//iconos redes
 	.icons {
@@ -43,8 +41,8 @@
 		column-gap: 1rem;
 
 		.icon {
-			width: 4rem;
-			height: 4rem;
+			width: 3.5rem;
+			height: 3.5rem;
 			display: inline-flex;
 			align-items: center;
 			justify-content: center;
