--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -2,76 +2,92 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap');
 
-
 html {
-  box-sizing: border-box;
+	box-sizing: border-box;
+	height: -webkit-fill-available;
 }
 
-body{
-  margin: 0;
-  font-family: "Roboto", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body {
+	min-height: 100vh;
+	margin: 0;
+	font-family: 'Roboto', sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	overflow-y: hidden;
+	display: flex;
+	height: -webkit-fill-available;
+}
+#root {
+	flex-grow: 1;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .flex {
-  display: flex;
-  justify-content: center;
-  height: 100vh;
-  align-items: center;
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 
-  .layout-container{
-    margin-bottom: 4rem;
-  }
-  @media screen and (min-width: 768px) {
-    .layout-container{
-      width: 100%;
-      height: 100%;
-      margin-bottom: 0;
-     }
-  }
+	.layout-container {
+		margin-bottom: 4rem;
+	}
+	@media screen and (min-width: 700px) {
+		.layout-container {
+			width: 100%;
+			height: 100%;
+			margin-bottom: 0;
+		}
+	}
 }
 
-.light{
-  background-color: $background;
-  transition: background-color 1000ms linear;
-  p, h1, h3{
-    color: $dark-900 ; 
-  }
+.light {
+	background-color: $background;
+	transition: background-color 1000ms linear;
+	p,
+	h1,
+	h3 {
+		color: $dark-900;
+	}
 
-  .bar-item {
-    background-color: $dark-200;
-    transition: background-color 100ms linear;
+	.bar-item {
+		background-color: $dark-200;
+		transition: background-color 100ms linear;
 
-    &:hover{ 
-      background-color: $green-600;
-    }
+		&:hover {
+			background-color: $green-600;
+		}
 
-    .bar-icon{
-      color: black;
-    }
-  }
+		.bar-icon {
+			color: black;
+		}
+	}
 }
 
-.dark{
-  background-color: $background-dark;
-  transition: background-color 1000ms linear;
+.dark {
+	background-color: $background-dark;
+	transition: background-color 1000ms linear;
 
-  p, h1, h3{
-    color: white ;
-  }
+	p,
+	h1,
+	h3 {
+		color: white;
+		margin: 0;
+	}
 
-  .bar-item{
-    background-color: $dark-500;
-    transition: background-color 100ms linear;
+	.bar-item {
+		background-color: $dark-500;
+		transition: background-color 100ms linear;
 
-    &:hover {
-      background-color: $green-600;
-    }
+		&:hover {
+			background-color: $green-600;
+		}
 
-    .bar-icon {
-      color: black;
-    }
-  }
-
+		.bar-icon {
+			color: black;
+		}
+	}
 }
