--- a/src/sass/pages/_aboutMe.scss
+++ b/src/sass/pages/_aboutMe.scss
@@ -1,5 +1,54 @@
 .container {
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
+	flex-wrap: wrap;
+	margin: 0 2rem;
+
+	.img-place {
+		position: relative;
+		display: block;
+		margin: 0 auto;
+		width: 35%;
+
+		z-index: 1;
+
+		&::before {
+			content: '';
+			position: absolute;
+			top: -10px;
+			right: -15px;
+			width: 100%;
+			height: 100%;
+			border: 0.2rem solid #ddd;
+			z-index: -1;
+		}
+
+		img {
+			width: 100%;
+			height: auto;
+		}
+	}
+
+	.information {
+		.description {
+			overflow-y: scroll;
+		}
+	}
+}
+
+@media screen and (min-width: 700px) {
+	.container {
+		display: inline-grid;
+		margin-top: 2.5rem;
+		grid-template-columns: 30% 70%;
+		grid-template-rows: auto;
+		grid-template-areas:
+			'header header'
+			'profImg description';
+
+		img {
+			display: flex;
+		}
+		.information {
+		}
+	}
 }
