--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -7,30 +7,37 @@
 	height: 90%;
 
 	div {
+		display: flex;
+		flex-direction: column;
+
+		p {
+			font-size: 1rem;
+			margin: -1rem 0;
+		}
 		h1 {
 			font-size: 2rem;
 		}
-		p {
-			display: flex;
-			justify-content: flex-end;
-			font-size: 0.7rem;
-			margin-top: -1.5rem;
-		}
 	}
 	h3 {
-		padding: 0 0.5rem;
+		margin-top: -1rem;
 		font-size: 1.5rem;
 		height: 4rem;
 	}
 
 	@media screen and (min-width: 768px) {
 		div {
-			h1 {
-				font-size: 4rem;
-			}
 			p {
-				font-size: 1rem;
-				margin-top: -3rem;
+				font-size: 1.5rem;
+				margin-left: 0.2rem;
+			}
+			h1 {
+				font-size: 4.5rem;
+				margin: 0;
+				padding: 0;
+			}
+			h3 {
+				font-size: 2rem;
+				padding: 1rem 0;
 			}
 		}
 	}
@@ -38,15 +45,16 @@
 	//iconos redes
 	.icons {
 		display: flex;
+		flex-direction: row;
 		column-gap: 1rem;
 
 		.icon {
-			width: 3.5rem;
-			height: 3.5rem;
+			width: 3rem;
+			height: 3rem;
 			display: inline-flex;
 			align-items: center;
 			justify-content: center;
-			font-size: 2.5rem;
+			font-size: 2rem;
 			color: #fff;
 			border-radius: 50%;
 			outline: 0.2rem solid #fff;
