--- a/src/sass/pages/_aboutMe.scss
+++ b/src/sass/pages/_aboutMe.scss
@@ -18,7 +18,7 @@
 			right: -15px;
 			width: 100%;
 			height: 100%;
-			border: 0.2rem solid #ddd;
+			border: 0.2rem solid $secondary;
 			z-index: -1;
 		}
 
